Notes on --add-modules